# rosduct

./: CMakeLists.txt  README.md  package.xml
config/: example.yaml  multiple_robots.yaml  test.yaml
launch/: local_part_remap.launch  local_part_test.launch  remote_part_test.launch  rosduct.launch  test_rosduct.launch
scripts/: rosduct_main.py  test_node.py
src/rosduct/: conversions.py  rosbridge_client.py  rosduct_impl.py
